--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,23 @@
+spring:
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/course
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
 
+logging.level:
+  org.hibernate.SQL: debug
+
+jwt:
+  key:
+    access: accesskey
+    refresh: refreshkey
+  max-age:
+    access: 604800
